# ytnd

./: .env.example  .gitignore  LICENSE  pyproject.toml  run.py  supervisord.conf  supervisord.conf.txt
manager-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
manager-frontend/src/: App.tsx  index.css
manager-frontend/src/components/: DashboardView.tsx  LogView.tsx  LoginView.tsx  ProfileView.tsx  QueueView.tsx  SongsView.tsx  UsersView.tsx
manager-frontend/src/components/ui/: button.tsx  dialog.tsx  table.tsx  toast.tsx
manager-frontend/src/hooks/: useCsrfToken.ts
manager-frontend/src/lib/: api.ts
ytnd/: __init__.py  bot.py  cli.py  config.py  database.py  downloader.py  manager_server.py  manager_tokens.py  syncthing_client.py  utils.py
